@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.8)
 
 project(
 	agbsum
-	VERSION	7
+	VERSION	8
 	DESCRIPTION "GBA ROM header checksum patcher."
 	HOMEPAGE_URL "https://mandelbrot.dk/agbsum"
 	LANGUAGES C
