@@ -1,22 +1,19 @@
 /*
-	Copyright 2022 Gabriel Jensen.
+	Copyright 2022-2023 Gabriel Jensen.
 
 	This file is part of agbsum.
-
 	agbsum is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-
 	agbsum is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
-
 	You should have received a copy of the GNU Affero General Public License along with agbsum. If not, see <https://www.gnu.org/licenses/>.
 */
 
 #include <agbsum.h>
 
-#include <stdio.h>
-#include <stdlib.h>
+#include <stddef.h>
 
-void agbsum_exit(agbsum_stat const stat,FILE * rom) {
-	if (rom != nullptr) {fclose(rom);}
-
-	exit(stat == agbsum_stat_ok ? EXIT_SUCCESS : EXIT_FAILURE);
+void agb_inidat(agb_dat * const dat) {
+	dat->dopat = false;
+	dat->pth   = NULL;
+	dat->sil   = false;
+	dat->rom   = NULL;
 }
